--- a/polymer-and-dart/web/begin/codelab_list.html
+++ b/polymer-and-dart/web/begin/codelab_list.html
@@ -21,6 +21,14 @@
         transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
       }
     </style>
+    <div on-codelabvalidated="{{addCodelab}}">
+      <codelab-form codelab="{{newCodeLab}}"></codelab-form>
+    </div>
+    <div>
+    <template repeat="{{codelab in codelabs}}">
+    <codelab-element codelab="{{codelab}}"></codelab-element>
+    </template>
+    </div>
   </template>
   <script type="application/dart" src="codelab_list.dart"></script>
 </polymer-element>
